--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -22,6 +22,8 @@ jobs:
         with:
           dotnet-version: '5.0.x'
 
+        
+
       - name: Install dependencies
         run: dotnet restore
 
@@ -31,10 +33,10 @@ jobs:
           dotnet tool install --global dotnet-coverage
           dotnet sonarscanner begin /o:jayseth /k:Github-Test-Org /d:sonar.login=${{ secrets.SONAR_TOKEN }} /s:$GITHUB_WORKSPACE/SonarQube.Analysis.xml /d:sonar.cs.vscoveragexml.reportsPaths=coverage.xml
 
-      - name: Build
-        run: |
-          dotnet build
-          dotnet-coverage collect 'dotnet test' -f xml  -o 'coverage.xml'
+      # - name: Build
+      #   run: |
+      #     dotnet build
+      #     dotnet-coverage collect 'dotnet test' -f xml  -o 'coverage.xml'
           
       - name: Test with the dotnet CLI
         run: dotnet test --settings coverlet.runsettings --logger:trx
