--- a/.github/workflows/sonar-pyhton.yml
+++ b/.github/workflows/sonar-pyhton.yml
@@ -48,4 +48,4 @@ jobs:
           pip install requests
 
       - name: Make Python Requests
-        run: python ../script.py
+        run: python script.py
