--- a/.github/workflows/CombinedWF.yml
+++ b/.github/workflows/CombinedWF.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: BuildApp
     steps:
+      - uses: actions/checkout@v2.2.0
+        with:
+          fetch-depth: 0
+          
       - name: Sonarqube Begin
         run: | 
           dotnet tool install --global dotnet-sonarscanner
