--- a/.github/workflows/BuildScan.yml
+++ b/.github/workflows/BuildScan.yml
@@ -8,6 +8,10 @@ jobs:
   app_process:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2.2.0
+        with:
+          fetch-depth: 0
+          
       - name: Sonarqube Begin
         run: | 
           dotnet tool install --global dotnet-sonarscanner
