--- a/.github/workflows/SetupDotnet.yml
+++ b/.github/workflows/SetupDotnet.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  dotnet-build:
+  setup_dotnet:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.2.0
