--- a/.github/workflows/CombinedWF.yml
+++ b/.github/workflows/CombinedWF.yml
@@ -12,6 +12,7 @@ jobs:
       needs: BuildApp
 
   JIRA_Process:
+    needs: SonarScan
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.2.0
