--- a/.github/workflows/BuildScan.yml
+++ b/.github/workflows/BuildScan.yml
@@ -11,6 +11,12 @@ jobs:
       - uses: actions/checkout@v2.2.0
         with:
           fetch-depth: 0
+
+      - name: Setup .NET Core SDK
+        uses: actions/setup-dotnet@v3.2.0
+
+      - name: Install dependencies
+        run: dotnet restore
           
       - name: Sonarqube Begin
         run: | 
