--- a/.github/workflows/SetupDotnet.yml
+++ b/.github/workflows/SetupDotnet.yml
@@ -1,20 +1,30 @@
-name:  Setup Dontnet App
+name:  Integrate JIRA
 
 on:
   workflow_call:
   workflow_dispatch:
 
 jobs:
-  setup_dotnet:
+  JIRA_Process:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.2.0
         with:
-          # Disabling shallow clone is recommended for improving relevancy of sonarqube reporting
           fetch-depth: 0
 
-      - name: Setup .NET Core SDK
-        uses: actions/setup-dotnet@v3.2.0
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
 
       - name: Install dependencies
-        run: dotnet restore
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
+
+      - name: Make Python Requests
+        run: python script.py
+        env: 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          JIRA_USERNAME: ${{ secrets.JIRA_USERNAME }}
+          JIRA_TOKEN: ${{ secrets.JIRA_TOKEN }}
