--- a/.github/workflows/CombinedWF.yml
+++ b/.github/workflows/CombinedWF.yml
@@ -8,27 +8,5 @@ jobs:
       uses: ./.github/workflows/BuildScan.yml
 
   JIRA_Process:
-    needs: SonarScan
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2.2.0
-        with:
-          # Disabling shallow clone is recommended for improving relevancy of sonarqube reporting
-          fetch-depth: 0
-          
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.x
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests
-
-      - name: Make Python Requests
-        run: python script.py
-        env: 
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          JIRA_USERNAME: ${{ secrets.JIRA_USERNAME }}
-          JIRA_TOKEN: ${{ secrets.JIRA_TOKEN }}
+      needs: SonarScan
+      uses: ./.github/workflows/Python_JIRA.yml
