--- a/.github/workflows/CombinedWF.yml
+++ b/.github/workflows/CombinedWF.yml
@@ -5,8 +5,22 @@ on:
 
 jobs:
   SonarScan:
-      uses: ./.github/workflows/BuildScan.yml
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2.2.0
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of sonarqube reporting
+          fetch-depth: 0
+          
+      - uses: ./.github/workflows/BuildScan.yml
 
   JIRA_Process:
       needs: SonarScan
-      uses: ./.github/workflows/Python_JIRA.yml
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2.2.0
+          with:
+          # Disabling shallow clone is recommended for improving relevancy of sonarqube reporting
+            fetch-depth: 0
+            
+        - uses: ./.github/workflows/Python_JIRA.yml
