--- a/.github/workflows/CombinedWF.yml
+++ b/.github/workflows/CombinedWF.yml
@@ -4,23 +4,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  SonarScan:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2.2.0
-        with:
-          # Disabling shallow clone is recommended for improving relevancy of sonarqube reporting
-          fetch-depth: 0
-          
-      - uses: ./.github/workflows/BuildScan.yml
+  SonarScan: 
+    uses: ./.github/workflows/BuildScan.yml
 
   JIRA_Process:
-      needs: SonarScan
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v2.2.0
-          with:
-          # Disabling shallow clone is recommended for improving relevancy of sonarqube reporting
-            fetch-depth: 0
-            
-        - uses: ./.github/workflows/Python_JIRA.yml
+        uses: ./.github/workflows/Python_JIRA.yml
