--- a/.github/workflows/Dotnet_Build_Sonar_Scan.yml
+++ b/.github/workflows/Dotnet_Build_Sonar_Scan.yml
@@ -45,6 +45,6 @@ jobs:
           ASPNETCORE_ENVIRONMENT: Development
 
       - name: Sonarqube end
-        run: dotnet sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+        run: dotnet sonarscanner end /d:sonar.login="${{ env.SONAR_TOKEN }}"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
