--- a/.github/workflows/Dotnet_Build_Sonar_Scan.yml
+++ b/.github/workflows/Dotnet_Build_Sonar_Scan.yml
@@ -22,7 +22,7 @@ jobs:
           tlsSkipVerify: true 
           #Reading secrets from hashicorp vault 
           secrets: | 
-            secret/githubactions/SONAR_TOKEN |SONAR_TOKEN
+            secret/data/githubactions SONAR_TOKEN |SONAR_TOKEN
 
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v3.2.0
