--- a/.github/workflows/create-jira-issue.yml
+++ b/.github/workflows/create-jira-issue.yml
@@ -27,12 +27,25 @@ jobs:
     name: Jira Example
   
     steps:
+    - name: Set up HashiCorp Vault 
+      uses: hashicorp/vault-action@v2 
+      with: 
+        #Reading secrets from Github secrets 
+        url: "${{ secrets.VAULT_URL }}" 
+        token: "${{ secrets.VAULT_SECRET }}" 
+        tlsSkipVerify: true 
+        #Reading secrets from hashicorp vault 
+        secrets: | 
+          secret/data/githubactions JIRA_BASE_URL |JIRA_BASE_URL;
+          secret/data/githubactions JIRA_USERNAME |JIRA_USERNAME;
+          secret/data/githubactions JIRA_TOKEN |JIRA_TOKEN
+    
     - name: Login
       uses: atlassian/gajira-login@v3
       env:
-        JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
-        JIRA_USER_EMAIL: ${{ secrets.JIRA_USERNAME }}
-        JIRA_API_TOKEN: ${{ secrets.JIRA_TOKEN }}
+        JIRA_BASE_URL: ${{ env.JIRA_BASE_URL }}
+        JIRA_USER_EMAIL: ${{ env.JIRA_USERNAME }}
+        JIRA_API_TOKEN: ${{ env.JIRA_TOKEN }}
     
     - name: Create Jira Issue
       id: create
