--- a/.github/workflows/ci_githubaction_main.yml
+++ b/.github/workflows/ci_githubaction_main.yml
@@ -19,3 +19,9 @@ jobs:
 
   Dependabot:
     uses: ./.github/workflows/dependabot_scanning.yml
+
+  JFROG_Publish:
+    uses: ./.github/workflows/jfrog.yml
+    needs: [SonarScan, CodeQL, SonarJIRA, Dependabot]
+    secrets: inherit
+    
