--- a/.github/workflows/dependabot_scanning.yml
+++ b/.github/workflows/dependabot_scanning.yml
@@ -4,7 +4,7 @@ name: 'Dependency Review'
 on: 
   workflow_call:
   workflow_dispatch:
-  # pull_request:
+  pull_request:
 
 permissions:
   contents: read
@@ -18,6 +18,6 @@ jobs:
       
       - name: 'Dependency Review'
         uses: actions/dependency-review-action@v3
-        # with:
-        #   config-file: './action.yml'
+        with:
+          config-file: './.github/dependency-review-config.yml'
           
