--- a/.github/workflows/dependabot_scanning.yml
+++ b/.github/workflows/dependabot_scanning.yml
@@ -20,4 +20,6 @@ jobs:
         uses: actions/dependency-review-action@v3
         with:
           config-file: './.github/dependency-review-config.yml'
+          base-ref: main
+          head-ref: main
           
