--- a/.github/workflows/Sonar_Python_Jira.yml
+++ b/.github/workflows/Sonar_Python_Jira.yml
@@ -24,7 +24,7 @@ jobs:
             secret/data/githubactions JIRA_USERNAME |JIRA_USERNAME;
             secret/data/githubactions JIRA_TOKEN |JIRA_TOKEN;
             secret/data/githubactions SONAR_TOKEN |SONAR_TOKEN;
-            secret/data/githubactions JIRA_URL |JIRA_URL
+            secret/data/githubactions JIRA_BASE_URL |JIRA_BASE_URL
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -42,4 +42,4 @@ jobs:
           SONAR_TOKEN: ${{ env.SONAR_TOKEN }}
           JIRA_USERNAME: ${{ env.JIRA_USERNAME }}
           JIRA_TOKEN: ${{ env.JIRA_TOKEN }}
-          JIRA_URL: ${{ env.JIRA_URL }}
+          JIRA_URL: ${{ env.JIRA_BASE_URL }}
