--- a/.github/workflows/jfrog.yml
+++ b/.github/workflows/jfrog.yml
@@ -40,5 +40,15 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          push: true
+          push: false
           tags: ${{ env.JFROG_URL }}/${{ env.JFROG_REPO }}/dotnetsample:latest
+
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ env.JFROG_URL }}/${{ env.JFROG_REPO }}/dotnetsample:latest
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
