--- a/.github/workflows/jfrog.yml
+++ b/.github/workflows/jfrog.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ env.JFROG_URL }}/${{ env.JFROG_REPO }}/dotnetsample:latest
+          image-ref: dotnetsample:latest
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
