--- a/.github/workflows/jfrog.yml
+++ b/.github/workflows/jfrog.yml
@@ -35,20 +35,28 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
-      - name: Build and push
+      - name: Build 
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./Dockerfile
-          push: false
+          load: true
           tags: ${{ env.JFROG_URL }}/${{ env.JFROG_REPO }}/dotnetsample:latest
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: dotnetsample:latest
+          image-ref: ${{ env.JFROG_URL }}/${{ env.JFROG_REPO }}/dotnetsample:latest
           format: 'table'
           exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
+
+      - name: Push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ env.JFROG_URL }}/${{ env.JFROG_REPO }}/dotnetsample:latest
