--- a/.github/workflows/blazemeter.yml
+++ b/.github/workflows/blazemeter.yml
@@ -1,16 +1,14 @@
 name: "Blazemeter"
 
 env:
-  apiKey: ${{ secrets.APIKEY }}
-  apiSecret: ${{ secrets.APISECRET }}
   createTest: "true"
-  inputStartFile: "PerfTest01.jmx"
-  testName: "Sample"
-  projectID: "2161675"
+  inputStartFile: "./.github/blazemeter/PerfTest01.jmx"
+  testName: "SampleTest"
+  projectID: "20231117"
   #testID: "13554278"
   continuePipeline: "false"
   showTailLog: "false"
-  reportName: Test1030
+  reportName: Test1711
 
 on:
   # Allows you to run this workflow manually from the Actions tab
@@ -19,10 +17,23 @@ on:
 
 jobs:
   build:
+    # runs-on: dindrunner
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Set up HashiCorp Vault 
+        uses: hashicorp/vault-action@v2 
+        with: 
+          #Reading secrets from Github secrets 
+          url: "${{ secrets.VAULT_URL }}" 
+          token: "${{ secrets.VAULT_SECRET }}" 
+          tlsSkipVerify: true 
+          #Reading secrets from hashicorp vault 
+          secrets: | 
+            secret/data/githubactions BLAZE_API_KEY | apiKey
+            secret/data/githubactions BLAZE_API_SECRET | apiSecret
       
       - name: Run Blazemeter test          
         uses: BlazeRunner-BZR/Github-Action@v8.1
@@ -34,7 +45,7 @@ jobs:
           inputStartFile: ${{env.inputStartFile}}
           testName: ${{env.testName}}
           projectID: ${{env.projectID}}
-          #testID: ${{vars.testID}}
+          # testID: ${{vars.testID}}
           reportName: ${{env.reportName}}
           continuePipeline: ${{env.continuePipeline}}
           showTailLog: ${{env.showTailLog}}
