--- a/.github/workflows/cd-integrated.yml
+++ b/.github/workflows/cd-integrated.yml
@@ -1,4 +1,5 @@
-name: "CD - Integrated Workflow"
+name: CD - Integrated Workflow
+
 on:
   workflow_dispatch:
 
@@ -9,4 +10,5 @@ jobs:
   
   blazemeter:
     uses: ./.github/workflows/blazemeter.yml
-      
+    secrets: inherit
+    
