--- a/.github/workflows/checkmarx.yml
+++ b/.github/workflows/checkmarx.yml
@@ -6,15 +6,15 @@ on:
     types: [opened, reopened, synchronize]
     # branches: [ "main" ]
 
-permissions:
-  contents: read
+# permissions:
+#   contents: read
 
 jobs:
   build:
     permissions:
-      contents: read
+      # contents: read
       security-events: write
-      actions: read
+      # actions: read
 
     runs-on: dindrunner
 
