--- a/.github/workflows/checkmarx.yml
+++ b/.github/workflows/checkmarx.yml
@@ -3,7 +3,7 @@ name: Checkmarx Scan
 on:
   workflow_call:
   pull_request:
-    types: [opened, reopened, synchronize]
+    # types: [opened, reopened, synchronize]
     # branches: [ "main" ]
 
 # permissions:
