--- a/.github/workflows/checkmarx.yml
+++ b/.github/workflows/checkmarx.yml
@@ -2,7 +2,7 @@ name: Checkmarx Scan
 
 on:
   workflow_call:
-  pull_request:
+  # pull_request:
     # types: [opened, reopened, synchronize]
     # branches: [ "main" ]
 
